[gd_scene load_steps=59 format=3 uid="uid://d3e0ebakk7y1p"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_0h0hi"]
[ext_resource type="Texture2D" uid="uid://c7f1lv1taorlc" path="res://assets/Idle/Idle (Fists)/Character Idle 48x48.png" id="1_h1jfo"]
[ext_resource type="Texture2D" uid="uid://bn0fflrcxpovw" path="res://assets/Jumping/player jump 48x48.png" id="2_juwfg"]
[ext_resource type="Texture2D" uid="uid://cd04ddc6d6hop" path="res://assets/Jumping/player land 48x48.png" id="4_ut3f0"]
[ext_resource type="Texture2D" uid="uid://ctvwcwebuutk" path="res://assets/Running/Running (Fists)/run cycle 48x48.png" id="5_r3uph"]
[ext_resource type="Texture2D" uid="uid://cuujj268l40rm" path="res://assets/Rolling/Player Roll 48x48.png" id="5_rsw7i"]
[ext_resource type="Texture2D" uid="uid://b6wcdtd1egbbm" path="res://assets/Jumping/player air spin 48x48.png" id="7_bd8bu"]
[ext_resource type="Script" path="res://Player/CharacterStateMachine.gd" id="7_nuphl"]
[ext_resource type="Script" path="res://Player/GroundState.gd" id="8_67ah6"]
[ext_resource type="Texture2D" uid="uid://bhpdxskrqix53" path="res://assets/Walking/PlayerWalk 48x48.png" id="8_ogiii"]
[ext_resource type="Script" path="res://Player/AirState.gd" id="9_uwdy0"]
[ext_resource type="Script" path="res://Player/StateLabel.gd" id="11_41eu6"]
[ext_resource type="Script" path="res://Player/HardLandingState.gd" id="11_w0lrt"]
[ext_resource type="Script" path="res://Player/RollingState.gd" id="13_hpclt"]
[ext_resource type="Script" path="res://Player/SoftLandingState.gd" id="14_6f1sh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_efaf8"]
size = Vector2(19, 30)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5xigp"]
size = Vector2(19, 24)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pbg88"]
animation = &"Air Spin"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_roy6i"]
animation = &"Fall"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tnl6s"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_h4ica"]
animation = &"Jump Max"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_cbvfl"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lcotu"]
animation = &"Land"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nwr4n"]
animation = &"Roll"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nhnb5"]
animation = &"Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hybai"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yfiq4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ytiwb"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8quw1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jixm0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0m5ix"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bmkji"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vdkm5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_724s4"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mdqbk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8mrs8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ix71r"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bnxco"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6nw86"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tfb4x"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p6bqx"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1wcaq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p56iv"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_htg1g"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0lncp"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_b8q2k"]
"states/Air Spin/node" = SubResource("AnimationNodeAnimation_pbg88")
"states/Air Spin/position" = Vector2(319.75, -135)
states/Fall/node = SubResource("AnimationNodeAnimation_roy6i")
states/Fall/position = Vector2(481.75, 22)
states/Idle/node = SubResource("AnimationNodeAnimation_tnl6s")
states/Idle/position = Vector2(179.75, 223.281)
states/Jump/node = SubResource("AnimationNodeAnimation_cbvfl")
states/Jump/position = Vector2(179.75, 22)
"states/Jump Max/node" = SubResource("AnimationNodeAnimation_h4ica")
"states/Jump Max/position" = Vector2(319.75, 22)
states/Land/node = SubResource("AnimationNodeAnimation_lcotu")
states/Land/position = Vector2(475.75, 223.281)
states/Roll/node = SubResource("AnimationNodeAnimation_nwr4n")
states/Roll/position = Vector2(337.75, 392)
states/Run/node = SubResource("AnimationNodeAnimation_nhnb5")
states/Run/position = Vector2(56.364, 142.281)
states/Start/position = Vector2(-158, 228.281)
states/Walk/node = SubResource("AnimationNodeAnimation_hybai")
states/Walk/position = Vector2(56.364, 324.281)
transitions = ["Jump", "Jump Max", SubResource("AnimationNodeStateMachineTransition_yfiq4"), "Jump Max", "Fall", SubResource("AnimationNodeStateMachineTransition_ytiwb"), "Jump", "Air Spin", SubResource("AnimationNodeStateMachineTransition_8quw1"), "Jump Max", "Air Spin", SubResource("AnimationNodeStateMachineTransition_jixm0"), "Fall", "Air Spin", SubResource("AnimationNodeStateMachineTransition_0m5ix"), "Air Spin", "Fall", SubResource("AnimationNodeStateMachineTransition_bmkji"), "Fall", "Roll", SubResource("AnimationNodeStateMachineTransition_vdkm5"), "Fall", "Land", SubResource("AnimationNodeStateMachineTransition_724s4"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_mdqbk"), "Idle", "Fall", SubResource("AnimationNodeStateMachineTransition_8mrs8"), "Fall", "Idle", SubResource("AnimationNodeStateMachineTransition_ix71r"), "Land", "Idle", SubResource("AnimationNodeStateMachineTransition_bnxco"), "Roll", "Idle", SubResource("AnimationNodeStateMachineTransition_6nw86"), "Idle", "Roll", SubResource("AnimationNodeStateMachineTransition_tfb4x"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_p6bqx"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_1wcaq"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_p56iv"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_htg1g"), "Idle", "Run", SubResource("AnimationNodeStateMachineTransition_0lncp")]
graph_offset = Vector2(-439.636, 28.281)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_qqd0b"]

[sub_resource type="Animation" id="Animation_hbt8r"]
resource_name = "Air Spin"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_bd8bu")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_v7nuf"]
resource_name = "Fall"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_juwfg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_1bdh0"]
resource_name = "Idle"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_h1jfo")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_jtpvk"]
resource_name = "Jump"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_juwfg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tjkmb"]
resource_name = "Jump Max"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_juwfg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_nhjkc"]
resource_name = "Land"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ut3f0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_1wqwb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8h8wa"]
resource_name = "Roll"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_rsw7i")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="Animation" id="Animation_qe3tg"]
resource_name = "Run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_r3uph")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_xvgbx"]
resource_name = "Walk"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_ogiii")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iu12j"]
_data = {
"Air Spin": SubResource("Animation_hbt8r"),
"Fall": SubResource("Animation_v7nuf"),
"Idle": SubResource("Animation_1bdh0"),
"Jump": SubResource("Animation_jtpvk"),
"Jump Max": SubResource("Animation_tjkmb"),
"Land": SubResource("Animation_nhjkc"),
"RESET": SubResource("Animation_1wqwb"),
"Roll": SubResource("Animation_8h8wa"),
"Run": SubResource("Animation_qe3tg"),
"Walk": SubResource("Animation_xvgbx")
}

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_0h0hi")

[node name="UprightCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_efaf8")

[node name="CrouchCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, 4)
shape = SubResource("RectangleShape2D_5xigp")
disabled = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_b8q2k")
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_qqd0b")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_iu12j")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("7_bd8bu")
hframes = 6

[node name="CharacterStateMachine" type="Node" parent="." node_paths=PackedStringArray("character", "animation_tree", "current_state")]
script = ExtResource("7_nuphl")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")
current_state = NodePath("Ground")

[node name="Ground" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("air_state", "rolling_state")]
script = ExtResource("8_67ah6")
air_state = NodePath("../Air")
rolling_state = NodePath("../Rolling")

[node name="Air" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("hard_landing_state", "soft_landing_state", "rolling_state")]
script = ExtResource("9_uwdy0")
hard_landing_state = NodePath("../HardLanding")
soft_landing_state = NodePath("../SoftLanding")
rolling_state = NodePath("../Rolling")

[node name="HardLanding" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("ground_state")]
script = ExtResource("11_w0lrt")
ground_state = NodePath("../Ground")
can_move = false

[node name="Rolling" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("ground_state")]
script = ExtResource("13_hpclt")
ground_state = NodePath("../Ground")
can_move = false

[node name="SoftLanding" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("ground_state")]
script = ExtResource("14_6f1sh")
ground_state = NodePath("../Ground")

[node name="StateLabel" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_left = -47.0
offset_top = -44.0
offset_right = 60.0
offset_bottom = -18.0
text = "State: current"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("11_41eu6")
state_machine = NodePath("../CharacterStateMachine")

[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/HardLanding" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/Rolling" method="_on_animation_tree_animation_finished"]
[connection signal="animation_finished" from="AnimationTree" to="CharacterStateMachine/SoftLanding" method="_on_animation_tree_animation_finished"]
